# udpflow

./: Readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/udpflow/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp-console-app/: CMakeLists.txt  main.cpp
app/src/main/cpp/include/udpflow/: CommandHandler.h  CommandProcessor.h  Consts.h  External.h  ICommandHandler.h  Receiver.h  Sender.h  Server.h  Stat.h  StatCollector.h  Utils.h
app/src/main/cpp/src/: CommandHandler.cpp  CommandProcessor.cpp  Receiver.cpp  Sender.cpp  Sender.h  Server.cpp  Stat.cpp  StatCollector.cpp  Utils.cpp
app/src/main/java/com/example/udpflow/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/udpflow/: ExampleUnitTest.kt
reports/phone-as-access-point/: Report.md  UdpFlow_Stat14.10.2024_04_54_14.csv
reports/v2/: Report.md  UdpFlow_Stat22.10.2024_04_45_28.csv  UdpFlow_Stat22.10.2024_04_59_05.csv
scripts/: plot_gen.py
